--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<!-- BÖRJAN header -->
 			<header>
 				<div id="div-head">
+
 					<div id="head-left">
 						<div class="fl head-logo left">
 							<img src=" images/logo_inv.png" alt="Duck logo">
@@ -32,6 +33,8 @@
 						<div class="fl head-logo right">
 							<img src=" images/logo_inv_fliped.png" alt="Duck logo">
 						</div>
+						<div class="vagn2 nomobile"><a href=" kundvagn/" ><span id="kundvagn2">0</span>&nbsp;</a></div>
+
 					</div>
 					<div id="head-search">
 						<form>
@@ -55,7 +58,7 @@
 					<li class="left"><a href=" superhjaltar/">SUPERHJÄLTAR</a></li>
 					<li class="left"><a href=" ovriga/">ÖVRIGA</a></li>
 
-					<li class="vagn2 nomobile"><a href=" kundvagn/" ><span id="kundvagn2">0</span>&nbsp;</a></li>
+
 				</ul>
 			</nav>
 			</form>
@@ -94,7 +97,7 @@
 					<div class="fr noselect mySliderArrow mySliderArrowRight" onclick="plusDivs(1, 'l')">&#10095;</div>
 					<h2>Nya superhjälteankor ENDAST 29kr</h2>
 				</div>
-				
+
 				<div id="mySliderMenu">
 					<div class="noselect" style="margin: 0 auto;">
 						<span class="mySliderButton" onclick="currentDiv(1)"></span>
