Förenklade bred-brumbsen stilmässigt

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 
 			<nav id="bread-crumbs">
 				<ul>
-					<li><a href=" ">&raquo; &nbsp; HEM</a></li>
+					<li><a href=" ">Hem</a> <span> / </span></li>
+					<li><a href=" ">Undermeny(test)</a> <span> / </span></li>
 				</ul>
 			</nav>
 
