bread-crumbs-text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href=" ">Hem</a> <span> / </span></li>
-					<li><a href=" ">Undermeny(test)</a> <span> / </span></li>
+					<li><a href=" ">Undermeny()</a> <span> / </span></li>
 				</ul>
 			</nav>
 
