Rensat css för kundvagn + kundvagn desktop = header mobil = meny

--- a/index.html
+++ b/index.html
@@ -20,29 +20,31 @@
 
 			<!-- BÖRJAN header -->
 			<header>
-				<div id="div-head">
-
-					<div id="head-left">
-						<div class="fl head-logo left">
-							<img src=" images/logo_inv.png" alt="Duck logo">
+				<header>
+					<div id="div-head">
+						<div id="head-left">
+							<div class="fl head-logo left">
+								<img src=" images/logo_inv.png" alt="Duck logo">
+							</div>
+							<div class="fl">
+								<h1><a href=" ">Badarens Bad</a></h1>
+								<p>Badankor för alla tillfällen!</p>
+							</div>
+							<div class="fl head-logo right">
+								<img src=" images/logo_inv_fliped.png" alt="Duck logo">
+							</div>
 						</div>
-						<div class="fl">
-							<h1><a href=" ">Badarens Bad</a></h1>
-							<p>Badankor för alla tillfällen!</p>
+						<div id="head-search">
+							<form>
+					    <input type="text" name="search" placeholder="Sök produkt..">
+					  </form>
 						</div>
-						<div class="fl head-logo right">
-							<img src=" images/logo_inv_fliped.png" alt="Duck logo">
-						</div>
-						<div class="vagn2 nomobile"><a href=" kundvagn/" ><span id="kundvagn2">0</span>&nbsp;</a></div>
-
 					</div>
-					<div id="head-search">
-						<form>
-				    <input type="text" name="search" placeholder="Sök produkt..">
-				  </form>
-					</div>
-				</div>
-				<div class="clear"> </div>
+
+
+					<div id="head-kundvagn"><a href=" kundvagn/" ><span id="kundvagn3">0</span>&nbsp;</a></div>
+
+					<div class="clear"> </div>
 			</header>
 			<!-- SLUT header -->
 
