Lagt till alla kategorisidor

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<li class="vagn mobile"><a href=" kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
 
 					<li class="left"><a class="active" href=" ">HEM</a></li>
-					<li class="left"><a href=" yrken/">YRKEN</a></li>
+					<li class="left"><a href=" yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a href=" superhjaltar/">SUPERHJÄLTAR</a></li>
 					<li class="left"><a href=" ovriga/">ÖVRIGA</a></li>
 
@@ -70,7 +70,6 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href=" ">Hem</a> <span> / </span></li>
-					<li><a href=" ">Undermeny()</a> <span> / </span></li>
 				</ul>
 			</nav>
 
