Fixat kundvagn i både index.html och meny.html.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				  </form>
 					</div>
 				</div>
+				<div id="head-kundvagn"><a href=" kundvagn/" ><span id="kundvagn">0</span>&nbsp;</a></div>
 				<div class="clear"> </div>
 			</header>
 			<!-- SLUT header -->
@@ -48,14 +49,11 @@
 			<nav id="main-nav">
 				<ul class="topnav">
 					<li class="menu mobile" onclick="topMenu()"><a href="#home">| | |</a></li>
-					<li class="vagn mobile"><a href=" kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
 
 					<li class="left"><a class="active" href=" ">HEM</a></li>
 					<li class="left"><a href=" yrken/">YRKEN</a></li>
 					<li class="left"><a href=" superhjaltar/">SUPERHJÄLTAR</a></li>
 					<li class="left"><a href=" ovriga/">ÖVRIGA</a></li>
-
-					<li class="vagn2 nomobile"><a href=" kundvagn/" ><span id="kundvagn2">0</span>&nbsp;</a></li>
 				</ul>
 			</nav>
 			</form>
