--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -39,10 +39,7 @@
 				  </form>
 					</div>
 				</div>
-
-
-				<div id="head-kundvagn"><a href=" kundvagn/" ><span id="kundvagn3">0</span>&nbsp;</a></div>
-
+				<div id="head-kundvagn"><a href=" kundvagn/" ><span id="kundvagn">0</span>&nbsp;</a></div>
 				<div class="clear"> </div>
 			</header>
 			<!-- SLUT header -->
