lagt till bilder på superhältesidan

--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -52,7 +52,7 @@
 
 					<li class="left"><a href="../index.html">HEM</a></li>
 					<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
-					<li class="left"><a href="../superhjaltar/">SUPERHJÄLTAR</a></li>
+					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 					<li class="left"><a class="active" href="">ÖVRIGA</a></li>
 					<li class="menu mobile" onclick="topMenu()"><a href="#home">| | |</a></li>
 					<li class="vagn mobile"><a href=" kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
@@ -65,7 +65,7 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
-					<li><a href=" ">Yrken</a> <span> / </span></li>
+					<li><a href=" ">Övriga Badankor</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -90,7 +90,7 @@
 					<ul class="topnav">
 						<li class="left"><a href="../index.html">HEM</a></li>
 						<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
-						<li class="left"><a href="../superhjaltar/">SUPERHJÄLTAR</a></li>
+						<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 						<li class="left"><a class="active" href="">ÖVRIGA</a></li>
 					</ul>
 				</nav>
