--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -50,10 +50,10 @@
 				<ul class="topnav">
 					<li class="menu" onclick="topMenu()"><a href="#home">| | |</a></li>
 
-					<li class="left"><a class="active" href="../index.html">HEM</a></li>
+					<li class="left"><a href="../index.html">HEM</a></li>
 					<li class="left"><a class="active" href=" ">YRKEN</a></li>
-					<li class="left"><a href="../superhjaltar/">SUPERHJÄLTAR</a></li>
-					<li class="left"><a href="../ovriga/">ÖVRIGA</a></li>
+					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
+					<li class="left"><a href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
 					<li class="menu mobile" onclick="topMenu()"><a href="#home">| | |</a></li>
 					<li class="vagn mobile"><a href=" kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
 				</ul>
@@ -65,7 +65,7 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
-					<li><a href=" ">Yrken</a> <span> / </span></li>
+					<li><a href=" ">Badankor Yrkestema</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -89,9 +89,9 @@
 				<nav id="left-nav" class="nomobile">
 					<ul class="topnav">
 						<li class="left"><a href="../index.html">HEM</a></li>
-						<li class="left"><a class="active" href=" yrken/">YRKEN</a></li>
-						<li class="left"><a href="../superhjaltar/">SUPERHJÄLTAR</a></li>
-						<li class="left"><a href="../ovriga/">ÖVRIGA</a></li>
+						<li class="left"><a class="active" href=" ">YRKEN</a></li>
+						<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
+						<li class="left"><a href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
 					</ul>
 				</nav>
 
