--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
 					<li class="left"><a class="active" href=" ">HEM</a></li>
 					<li class="left"><a href=" yrken/badankor_yrken.html">YRKEN</a></li>
-					<li class="left"><a href=" superhjaltar/">SUPERHJÄLTAR</a></li>
-					<li class="left"><a href=" ovriga/">ÖVRIGA</a></li>
+					<li class="left"><a href=" superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
+					<li class="left"><a href=" ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
 				</ul>
 			</nav>
 			</form>
