--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -96,8 +96,25 @@
 				</nav>
 
 				<main id="right-main">
-					<div class="">
-						produkter
+					<div class="text">
+				    <h1>Övriga ankiga produkter</h1>
+				    <p>Här hittar du badankor och andra ankliknande produkter. Nedan listas våra badankor och andra plaskvänliga artiklar som vi tillhandahåller. </p>
+				  </div>
+				    <div class="clearfix"></div>
+				  <div class="flex-produkter">
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/badanka_enorm.jpg" alt="Enorm uppblåsbar gul badanka"></div><div class="namn"><span>Badanka Enorm</span></div><div class="pris"><span>299kr</span></div></div>
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/dracula.jpg" alt="Vit vampyrbadanka med blod"></div><div class="namn"><span>Badanka Dracula</span></div><div class="pris"><span>37kr</span></div></div>
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/magisk.jpg" alt="Lila glittrig badanka"></div><div class="namn"><span>Badanka Magisk</span></div><div class="pris"><span>37kr</span></div></div>
+						<div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/mugg_debugger.jpg" alt="Mugg med anka och text"></div><div class="namn"><span>Mugg Debugger</span></div><div class="pris"><span>13kr</span></div></div>
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/munk.jpg" alt="Donut-badanka med rosa glasyr och strössel"></div><div class="namn"><span>Badanka Munk</span></div><div class="pris"><span>13kr</span></div></div>
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/realistisk.jpg" alt="Brun and med grönt huvud"></div><div class="namn"><span>Badanka Realistisk</span></div><div class="pris"><span>13kr</span></div></div>
+						<div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/rubix.jpg" alt="Badanka med Rubiks kub-mönster"></div><div class="namn"><span>Badanka Rubiks kub</span></div><div class="pris"><span>13kr</span></div></div>
+						<div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/strand.jpg" alt="Gul badanka med solglasögon och baddräkt"></div><div class="namn"><span>Badanka Strand</span></div><div class="pris"><span>13kr</span></div></div>
+						<div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/trump.jpg" alt="Badanka Donald Trump"></div><div class="namn"><span>Badanka Trump</span></div><div class="pris"><span>13kr</span></div></div>
+						<div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/tshirt_cyklop_anka.jpg" alt="Vit T-shirt med badanksmotiv"></div><div class="namn"><span>T-shirt Cyklopanka</span></div><div class="pris"><span>13kr</span></div></div>
+						<div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/tshirt_keep_calm.jpg" alt="Vit T-shirt med badanka och klok text"></div><div class="namn"><span>T-shirt Keep Calm</span></div><div class="pris"><span>13kr</span></div></div>
+						<div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/tshirt_manga_ankor.jpg" alt="Gul T-shirt full av ankor"></div><div class="namn"><span>T-shirt "for (;;) {Anka}""</span></div><div class="pris"><span>13kr</span></div></div>
+
 					</div>
 
 					<div class="clear"> </div>
