--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -96,9 +96,19 @@
 				</nav>
 
 				<main id="right-main">
-					<div class="">
-						produkter
-					</div>
+					<div class="text">
+				    <h1>Yrkesverksamma Badankor</h1>
+				    <p>Här hittar du badankor med yrkestema. Nedan listas våra badankor i arbetskläder.</p>
+				  </div>
+				    <div class="clearfix"></div>
+				  <div class="flex-produkter">
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div><div class="namn"><span>Badanka Brandman</span></div><div class="pris"><span>13kr</span></div></div>
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/yrken/detektiv.jpg" alt="Gul badanka Detektiv med förstoringsglas"></div><div class="namn"><span>Badanka Detektiv</span></div><div class="pris"><span>37kr</span></div></div>
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/yrken/doktor.jpg" alt="Gul badanka med vit läkarrock"></div><div class="namn"><span>Badanka Doktor</span></div><div class="pris"><span>37kr</span></div></div>
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/yrken/kapten.jpg" alt="Gul badanka med kaptenshatt och kavaj"></div><div class="namn"><span>Badanka Kapten</span></div><div class="pris"><span>13kr</span></div></div>
+				    <div class="child-produkter"><div class="produktbild"><img src="../images/yrken/pirat.jpg" alt="Gul badanka Pirat med kniv och bandana"></div><div class="namn"><span>Badanka Pirat</span></div><div class="pris"><span>13kr</span></div></div>
+						<div class="child-produkter"><div class="produktbild"><img src="../images/yrken/systemvetare.jpg" alt="Badanka Systemvetare 1337 h4x0r"></div><div class="namn"><span>Badanka Systemvetare</span></div><div class="pris"><span>1337kr</span></div></div>
+				  </div>
 
 					<div class="clear"> </div>
 				</main>
