justify-content: center; på flex-barnen på mindre skärmar

--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -96,7 +96,7 @@
 				</nav>
 
 				<main id="right-main">
-					<div class="text">
+					<div class="text-produkter">
 				    <h1>Övriga ankiga produkter</h1>
 				    <p>Här hittar du badankor och andra ankliknande produkter. Nedan listas våra badankor och andra plaskvänliga artiklar som vi tillhandahåller. </p>
 				  </div>
