--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -96,7 +96,7 @@
 				</nav>
 
 				<main id="right-main">
-					<div class="text">
+					<div class="text-produkter">
 				    <h1>Badankor Superhjältar</h1>
 				    <p>Här hittar du badankor med superhjältetema. Nedan listas våra badankor utklädda till superhjältar.</p>
 				  </div>
