--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -96,7 +96,7 @@
 				</nav>
 
 				<main id="right-main">
-					<div class="text">
+					<div class="text-produkter">
 				    <h1>Yrkesverksamma Badankor</h1>
 				    <p>Här hittar du badankor med yrkestema. Nedan listas våra badankor i arbetskläder.</p>
 				  </div>
