--- a/index.html
+++ b/index.html
@@ -102,6 +102,22 @@
 				</div>
 
 				<div class="clear"> </div>
+				<br>
+				<br>
+				<div class="text-produkter">
+					<h1>Populära produkter</h1>
+					<p>Här finner du våra populäraste badankor. För fler badankor använd sökfunktionen eller bläddra runt bland våra ankiga kategorier.</p>
+				</div>
+				<div class="flex-produkter">
+					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div><div class="namn"><span>Badanka Brandman</span></div><div class="pris"><span>13kr</span></div></div></a>
+					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/ovriga/munk.jpg" alt="Donut-badanka med rosa glasyr och strössel"></div><div class="namn"><span>Badanka Munk</span></div><div class="pris"><span>13kr</span></div></div></a>
+					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/systemvetare.jpg" alt="Badanka Systemvetare 1337 h4x0r"></div><div class="namn"><span>Badanka Systemvetare</span></div><div class="pris"><span>1337kr</span></div></div></a>
+					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/kapten.jpg" alt="Gul badanka med kaptenshatt och kavaj"></div><div class="namn"><span>Badanka Kapten</span></div><div class="pris"><span>13kr</span></div></div></a>
+					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/pirat.jpg" alt="Gul badanka Pirat med kniv och bandana"></div><div class="namn"><span>Badanka Pirat</span></div><div class="pris"><span>13kr</span></div></div></a>
+					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/systemvetare.jpg" alt="Badanka Systemvetare 1337 h4x0r"></div><div class="namn"><span>Badanka Systemvetare</span></div><div class="pris"><span>1337kr</span></div></div></a>
+					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/ovriga/magisk.jpg" alt="Lila glittrig badanka"></div><div class="namn"><span>Badanka Magisk</span></div><div class="pris"><span>37kr</span></div></div></a>
+				</div>
+				<div class="clear"></div>
 			</main>
 			<div class="clear"> </div>
 			<!-- SLUT main -->
