--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -100,14 +100,14 @@
 				    <h1>Badankor Superhjältar</h1>
 				    <p>Här hittar du badankor med superhjältetema. Nedan listas våra badankor utklädda till superhjältar.</p>
 				  </div>
-				    <div class="clearfix"></div>
+				    <div class="clear"></div>
 				  <div class="flex-produkter">
-				    <div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/batman.jpg" alt="Badanka Batman"></div><div class="namn"><span>Badanka Batman</span></div><div class="pris"><span>13kr</span></div></div>
-				    <div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/spiderman.jpg" alt="Badanka Spindelmannen"></div><div class="namn"><span>Badanka Spindelmannen</span></div><div class="pris"><span>37kr</span></div></div>
-				    <div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superwoman.jpg" alt="Badanka Superwoman"></div><div class="namn"><span>Badanka Superwoman</span></div><div class="pris"><span>37kr</span></div></div>
-				    <div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superman.jpg" alt="Badanka Superman"></div><div class="namn"><span>Badanka Superman</span></div><div class="pris"><span>13kr</span></div></div>
-				    <div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/wonderwoman.jpg" alt="Badanka Wonderwoman"></div><div class="namn"><span>Badanka Wonderwoman</span></div><div class="pris"><span>13kr</span></div></div>
-						<div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superduck.jpg" alt="Badanka Superhjälteanka"></div><div class="namn"><span>Badanka Superduck</span></div><div class="pris"><span>13kr</span></div></div>
+				    <a href="batman.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/batman.jpg" alt="Badanka Batman"></div><div class="namn"><span>Badanka Batman</span></div><div class="pris"><span>13kr</span></div></div></a>
+				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/spiderman.jpg" alt="Badanka Spindelmannen"></div><div class="namn"><span>Badanka Spindelmannen</span></div><div class="pris"><span>37kr</span></div></div></a>
+				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superwoman.jpg" alt="Badanka Superwoman"></div><div class="namn"><span>Badanka Superwoman</span></div><div class="pris"><span>37kr</span></div></div></a>
+				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superman.jpg" alt="Badanka Superman"></div><div class="namn"><span>Badanka Superman</span></div><div class="pris"><span>13kr</span></div></div></a>
+				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/wonderwoman.jpg" alt="Badanka Wonderwoman"></div><div class="namn"><span>Badanka Wonderwoman</span></div><div class="pris"><span>13kr</span></div></div></a>
+						<a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superduck.jpg" alt="Badanka Superhjälteanka"></div><div class="namn"><span>Badanka Superduck</span></div><div class="pris"><span>13kr</span></div></div></a>
 				  </div>
 
 					<div class="clear"> </div>
