--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -134,32 +134,34 @@
 
 
 			<!-- BÖRJAN footer -->
+			<!-- BÖRJAN footer -->
 			<footer>
-				<div id="servicelankar">
-					<p><a href=" kundservice.html">Kundservice</a></p>
-					<p><a href=" returer.html">Returer</a></p>
-					<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
-					<p><a href=" hjalp.html">Hjälp</a></p>
-					<p><a href=" kontakt.html">Kontakta oss</a></p>
-				</div>
+	<div id="servicelankar">
+	<p class="title">Servicelänkar</p>
+	<p><a href="service/kundservice.html">Kundservice</a></p>
+	<p><a href="service/returer.html">Returer</a></p>
+	<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
+	<p><a href="service/hjalp.html">Hjälp</a></p>
+	<p><a href="service/kontakt.html">Kontakta oss</a></p>
+	</div>
+	<div id="betalning">
+	<p class="title">Betalningstjänster</p>
+	<a href="https://www.klarna.com/se/"><img class="img1" src=" images/logo/klarna.png" alt="klarna"></a>
+	<a href="https://www.paypal.com/se/home"><img class="img1" src=" images/logo/paypal.png" alt="paypal"></a>
+	<a href="https://www.visa.se/"><img class="img2" src=" images/logo/visa.png" alt="visa"></a>
+	<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src=" images/logo/mastercard.png" alt="mastercard"></a>
+	</div>
+	<div id="frakt">
+	<p class="title">Frakttjänster</p>
+	<a href="http://www.dhl.se"><img class="img1" src="../images/logo/dhl.png" alt="dhl"></a>
+	<a href="https://www.postnord.se"><img class="img1" src="../images/logo/postnord.png" alt="postnord"></a>
+	</div>
+	<div id="tryggehandel">
+	<a href="https://www.tryggehandel.se/"><img class="img1" src="../images/logo/tryggehandel.png" alt="trygg e-handel"></a>
+	<div class="clear"></div>
+	</div>
+	</footer>
 
-				<div id="tryggehandel">
-					<a href="https://www.tryggehandel.se/"><img class="img1" src="../images/logo/tryggehandel.png" alt="trygg e-handel"></a>
-				</div>
-				<div class="clear partnersplit3"></div>
-				<div id="partners">
-					<a href="http://www.dhl.se"><img class="img1" src="../images/logo/dhl.png" alt="dhl"></a>
-					<a href="https://www.klarna.com/se/"><img class="img1" src="../images/logo/klarna.png" alt="klarna"></a>
-					<div class="clear partnersplit1"></div>
-					<a href="https://www.paypal.com/se/home"><img class="img1" src="../images/logo/paypal.png" alt="paypal"></a>
-					<div class="clear partnersplit2"></div>
-					<a href="https://www.postnord.se"><img class="img1" src="../images/logo/postnord.png" alt="postnord"></a>
-					<div class="clear partnersplit1"></div>
-					<a href="https://www.visa.se/"><img class="img2" src="../images/logo/visa.png" alt="visa"></a>
-					<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src="../images/logo/mastercard.png" alt="mastercard"></a>
-				</div>
-				<div class="clear"></div>
-			</footer>
 			<!-- SLUT footer -->
 
 
@@ -167,8 +169,7 @@
 
 
 
-			<div class="clear"></div>
-		</div>
+			<div class="clear">
 
 		<!-- W3C logos for valid HTML5 and CSS3 -->
 		<div class="clear"></div>
@@ -188,4 +189,4 @@
 			</p>
 		</div>
 	</body>
-</html>
+	</html>
