--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -23,14 +23,14 @@
 				<div id="div-head">
 					<div id="head-left">
 						<div class="fl head-logo left">
-							<img src="../images/logo_inv.png" alt="Duck logo">
+							<a href="../index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
 						</div>
 						<div class="fl">
-							<h1><a href=" ">Badarens Bad</a></h1>
+							<a href="../index.html"><h1>Badarens Bad</a></h1></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
-							<img src="../images/logo_inv_fliped.png" alt="Duck logo">
+							<a href="../index.html"><img src="../images/logo_inv_fliped.png" alt="Duck logo"></a>
 						</div>
 					</div>
 					<div id="head-search">
