--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -6,8 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
-		<script src="js.js"></script>
-		<script src="slider.js"></script>
+		<script src="../js.js"></script>
 	</head>
 	<body>
 		<div id="container">
