fixat trasiga bilder i footern

--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -138,10 +138,10 @@
 			</div>
 			<div id="betalning">
 			<p class="title">Betalningstjänster</p>
-			<a href="https://www.klarna.com/se/"><img class="img1" src=" images/logo/klarna.png" alt="klarna"></a>
-			<a href="https://www.paypal.com/se/home"><img class="img1" src=" images/logo/paypal.png" alt="paypal"></a>
-			<a href="https://www.visa.se/"><img class="img2" src=" images/logo/visa.png" alt="visa"></a>
-			<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src=" images/logo/mastercard.png" alt="mastercard"></a>
+			<a href="https://www.klarna.com/se/"><img class="img1" src="../images/logo/klarna.png" alt="klarna"></a>
+			<a href="https://www.paypal.com/se/home"><img class="img1" src="../images/logo/paypal.png" alt="paypal"></a>
+			<a href="https://www.visa.se/"><img class="img2" src="../images/logo/visa.png" alt="visa"></a>
+			<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src="../images/logo/mastercard.png" alt="mastercard"></a>
 			</div>
 			<div id="frakt">
 			<p class="title">Frakttjänster</p>
