skapat första produktsidan. brandman. mindre övriga fixar

--- a/yrken/badanka_brandman.html
+++ b/yrken/badanka_brandman.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badankor Superhjältar - Badande Badankor - Badankor för alla tänkbara tillfällen</title>
+		<title>Badanka Brandman - Badande Badankor - Badankor för alla tänkbara tillfällen</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
@@ -50,8 +50,8 @@
 					<li class="menu" onclick="topMenu()"><a href="#home">| | |</a></li>
 
 					<li class="left"><a href="../index.html">HEM</a></li>
-					<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
-					<li class="left"><a class="active" href="#">SUPERHJÄLTAR</a></li>
+					<li class="left"><a class="active" href="badankor_yrken.html">YRKEN</a></li>
+					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 					<li class="left"><a href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
 					<li class="menu mobile" onclick="topMenu()"><a href="#home">| | |</a></li>
 					<li class="vagn mobile"><a href=" kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
@@ -64,7 +64,8 @@
 			<nav id="bread-crumbs">
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
-					<li><a href=" ">Superhjälteankor</a> <span> / </span></li>
+					<li><a href=" ">Badankor Yrkestema</a> <span> / </span></li>
+					<li><a href=" ">Badanka Brandman</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -88,26 +89,35 @@
 				<nav id="left-nav" class="nomobile">
 					<ul class="topnav">
 						<li class="left"><a href="../index.html">HEM</a></li>
-						<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
-						<li class="left"><a class="active" href="#">SUPERHJÄLTAR</a></li>
+						<li class="left"><a class="active" href="badankor_yrken.html">YRKEN</a></li>
+						<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 						<li class="left"><a href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
 					</ul>
 				</nav>
 
 				<main id="right-main">
 					<div class="text-produkter">
-				    <h1>Badankor Superhjältar</h1>
-				    <p>Här hittar du badankor med superhjältetema. Nedan listas våra badankor utklädda till superhjältar.</p>
+				    <h1>Badanka Brandman</h1>
 				  </div>
 				    <div class="clear"></div>
-				  <div class="flex-produkter">
-				    <a href="batman.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/batman.jpg" alt="Badanka Batman"></div><div class="namn"><span>Badanka Batman</span></div><div class="pris"><span>13kr</span></div></div></a>
-				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/spiderman.jpg" alt="Badanka Spindelmannen"></div><div class="namn"><span>Badanka Spindelmannen</span></div><div class="pris"><span>37kr</span></div></div></a>
-				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superwoman.jpg" alt="Badanka Superwoman"></div><div class="namn"><span>Badanka Superwoman</span></div><div class="pris"><span>37kr</span></div></div></a>
-				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superman.jpg" alt="Badanka Superman"></div><div class="namn"><span>Badanka Superman</span></div><div class="pris"><span>13kr</span></div></div></a>
-				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/wonderwoman.jpg" alt="Badanka Wonderwoman"></div><div class="namn"><span>Badanka Wonderwoman</span></div><div class="pris"><span>13kr</span></div></div></a>
-						<a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superduck.jpg" alt="Badanka Superhjälteanka"></div><div class="namn"><span>Badanka Superduck</span></div><div class="pris"><span>13kr</span></div></div></a>
-				  </div>
+						<div class="produkt-info">
+							<div class="produkt-info-left">
+								<div class="produktbild_produktsida"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div>
+
+							</div>
+							<div class="produkt-info-right">
+								 <p>Vår populära badanka med brandmanstema. Badankan mäter 8cm i diameter. </p>
+								 <br><br>
+
+								<form name="buy">
+									<span class="pris">Pris: 137kr</span>
+									<br>
+									<br>
+
+									<span>Antal: </span><input type="text" name="antal" pattern="[0-9]" title="Ange antal:" size="2">
+									<input type="submit" value="Lägg i kundvagn">
+							</div>
+						</div>
 
 					<div class="clear"> </div>
 				</main>
