--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badande Badankor - Badankor för alla tänkbara tillfällen - Startsida</title>
+		<title>Badankor Yrken - Badande Badankor - Badankor för alla tänkbara tillfällen</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
@@ -101,7 +101,7 @@
 				  </div>
 				    <div class="clear"></div>
 				  <div class="flex-produkter">
-				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div><div class="namn"><span>Badanka Brandman</span></div><div class="pris"><span>13kr</span></div></div></a>
+				    <a href="badanka_brandman.html"><div class="child-produkter"><div class="produktbild"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div><div class="namn"><span>Badanka Brandman</span></div><div class="pris"><span>13kr</span></div></div></a>
 				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/yrken/detektiv.jpg" alt="Gul badanka Detektiv med förstoringsglas"></div><div class="namn"><span>Badanka Detektiv</span></div><div class="pris"><span>37kr</span></div></div></a>
 				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/yrken/doktor.jpg" alt="Gul badanka med vit läkarrock"></div><div class="namn"><span>Badanka Doktor</span></div><div class="pris"><span>37kr</span></div></div></a>
 				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/yrken/kapten.jpg" alt="Gul badanka med kaptenshatt och kavaj"></div><div class="namn"><span>Badanka Kapten</span></div><div class="pris"><span>13kr</span></div></div></a>
