--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badande Badankor - Badankor för alla tänkbara tillfällen - Startsida</title>
+		<title>Badankor Övriga produkter - Badande Badankor - Badankor för alla tänkbara tillfällen</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
