--- a/meny.html
+++ b/meny.html
@@ -39,7 +39,7 @@
 				  </form>
 					</div>
 				</div>
-				<div id="head-kundvagn"><a href=" kundvagn/" ><span id="kundvagn">0</span>&nbsp;</a></div>
+				<div id="head-kundvagn"><a href="kundvagn/" ><span id="kundvagn">0</span>&nbsp;</a></div>
 				<div class="clear"> </div>
 			</header>
 			<!-- SLUT header -->
@@ -48,14 +48,14 @@
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
 				<ul class="topnav">
-					<li class="menu" onclick="topMenu()"><a href="#home">| | |</a></li>
+					<li class="menu" onclick="topMenu()"><a href="#">| | |</a></li>
 
 					<li class="left"><a class="active" href=" ">HEM</a></li>
-					<li class="left"><a href=" yrken/">YRKEN</a></li>
-					<li class="left"><a href=" superhjaltar/">SUPERHJÄLTAR</a></li>
-					<li class="left"><a href=" ovriga/">ÖVRIGA</a></li>
-					<li class="menu mobile" onclick="topMenu()"><a href="#home">| | |</a></li>
-					<li class="vagn mobile"><a href=" kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
+					<li class="left"><a href="yrken/badankor_yrken.html">YRKEN</a></li>
+					<li class="left"><a href="superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
+					<li class="left"><a href="ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
+					<li class="menu mobile" onclick="topMenu()"><a href="#">| | |</a></li>
+					<li class="vagn mobile"><a href="kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
 				</ul>
 			</nav>
 			</form>
@@ -69,9 +69,9 @@
 			</nav>
 
 			<div id="lang-div">
-				<img onclick="setLanguage('sv')" src=" images/lang/sv.jpg" alt="svenska flaggan">
-				<img onclick="setLanguage('fi')" src=" images/lang/fi.jpg" alt="finska flaggan">
-				<img onclick="setLanguage('en')" src=" images/lang/en.jpg" alt="engelska flaggan">
+				<img onclick="setLanguage('sv')" src="images/lang/sv.jpg" alt="svenska flaggan">
+				<img onclick="setLanguage('fi')" src="images/lang/fi.jpg" alt="finska flaggan">
+				<img onclick="setLanguage('en')" src="images/lang/en.jpg" alt="engelska flaggan">
 			</div>
 			<!-- SLUT menu -->
 
@@ -88,9 +88,9 @@
 				<nav id="left-nav" class="nomobile">
 					<ul class="topnav">
 						<li class="left"><a class="active" href=" ">HEM</a></li>
-						<li class="left"><a href=" yrken/">YRKEN</a></li>
-						<li class="left"><a href=" superhjaltar/">SUPERHJÄLTAR</a></li>
-						<li class="left"><a href=" ovriga/">ÖVRIGA</a></li>
+						<li class="left"><a href="yrken/badankor_yrken.html">YRKEN</a></li>
+						<li class="left"><a href="superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
+						<li class="left"><a href="ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
 					</ul>
 				</nav>
 
