--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<a href="index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
 						</div>
 						<div class="fl">
-							<a href="index.html"><h1>Badarens Bad</a></h1></a>
+							<a href="index.html"><h1>Badarens Bad</h1></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
