--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -25,7 +25,7 @@
 							<a href="../index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
 						</div>
 						<div class="fl">
-							<a href="../index.html"><h1>Badarens Bad</a></h1></a>
+							<a href="../index.html"><h1>Badarens Bad</a></h1>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
