Början på kundvagn

--- a/yrken/badanka_brandman.html
+++ b/yrken/badanka_brandman.html
@@ -11,12 +11,7 @@
 	<body>
 		<div id="container">
 
-
-
-
-
-
-
+			
 			<!-- BÖRJAN header -->
 			<header>
 				<div id="div-head">
@@ -25,7 +20,7 @@
 							<a href="../index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
 						</div>
 						<div class="fl">
-							<a href="../index.html"><h1>Badarens Bad</a></h1></a>
+							<a href="../index.html"><h1>Badarens Bad</h1></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
@@ -76,13 +71,7 @@
 			</div>
 			<!-- SLUT menu -->
 
-
-
-
-
-
-
-
+			
 			<!-- BÖRJAN main -->
 			<div class="clear"></div>
 			<div id="nav-main">
@@ -122,73 +111,62 @@
 					<div class="clear"> </div>
 				</main>
 			</div>
+			
 			<div class="clear"> </div>
 			<!-- SLUT main -->
 
 
-
-
-
-
-
-
-
-
-
-			<!-- BÖRJAN footer -->
+			
 			<!-- BÖRJAN footer -->
 			<footer>
-			<div id="servicelankar">
-			<p class="title">Servicelänkar</p>
-			<p><a href="service/kundservice.html">Kundservice</a></p>
-			<p><a href="service/returer.html">Returer</a></p>
-			<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
-			<p><a href="service/hjalp.html">Hjälp</a></p>
-			<p><a href="service/kontakt.html">Kontakta oss</a></p>
-			</div>
-			<div id="betalning">
-			<p class="title">Betalningstjänster</p>
-			<a href="https://www.klarna.com/se/"><img class="img1" src="../images/logo/klarna.png" alt="klarna"></a>
-			<a href="https://www.paypal.com/se/home"><img class="img1" src="../images/logo/paypal.png" alt="paypal"></a>
-			<a href="https://www.visa.se/"><img class="img2" src="../images/logo/visa.png" alt="visa"></a>
-			<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src="../images/logo/mastercard.png" alt="mastercard"></a>
-			</div>
-			<div id="frakt">
-			<p class="title">Frakttjänster</p>
-			<a href="http://www.dhl.se"><img class="img1" src="../images/logo/dhl.png" alt="dhl"></a>
-			<a href="https://www.postnord.se"><img class="img1" src="../images/logo/postnord.png" alt="postnord"></a>
-			</div>
-			<div id="tryggehandel">
-			<a href="https://www.tryggehandel.se/"><img class="img1" src="../images/logo/tryggehandel.png" alt="trygg e-handel"></a>
-			<div class="clear"></div>
-			</div>
+				<div id="servicelankar">
+					<p class="title">Servicelänkar</p>
+					<p><a href="service/kundservice.html">Kundservice</a></p>
+					<p><a href="service/returer.html">Returer</a></p>
+					<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
+					<p><a href="service/hjalp.html">Hjälp</a></p>
+					<p><a href="service/kontakt.html">Kontakta oss</a></p>
+				</div>
+				<div id="betalning">
+					<p class="title">Betalningstjänster</p>
+					<a href="https://www.klarna.com/se/"><img class="img1" src="../images/logo/klarna.png" alt="klarna"></a>
+					<a href="https://www.paypal.com/se/home"><img class="img1" src="../images/logo/paypal.png" alt="paypal"></a>
+					<a href="https://www.visa.se/"><img class="img2" src="../images/logo/visa.png" alt="visa"></a>
+					<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src="../images/logo/mastercard.png" alt="mastercard"></a>
+				</div>
+				<div id="frakt">
+					<p class="title">Frakttjänster</p>
+					<a href="http://www.dhl.se"><img class="img1" src="../images/logo/dhl.png" alt="dhl"></a>
+					<a href="https://www.postnord.se"><img class="img1" src="../images/logo/postnord.png" alt="postnord"></a>
+				</div>
+				<div id="tryggehandel">
+					<a href="https://www.tryggehandel.se/"><img class="img1" src="../images/logo/tryggehandel.png" alt="trygg e-handel"></a>
+					<div class="clear"></div>
+				</div>
 			</footer>
-
 			<!-- SLUT footer -->
 
 
+			<div class="clear"> </div>
 
-
-
-
-			<div class="clear">
-
+			
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
 			<div style="margin-top: 100px;">
-			<p>
-			<a href="http://validator.w3.org/check?uri=referer"><img
-			src="http://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
-			alt="Valid HTML5" height="50" width="50"
-			style="border:0;" /></a>
-			</p>
-			<p>
-			<a href="http://jigsaw.w3.org/css-validator/check/referer">
-			<img style="border:0;width:88px;height:31px"
-			src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-			alt="Valid CSS!" />
-			</a>
-			</p>
+				<p>
+				<a href="http://validator.w3.org/check?uri=referer"><img
+				src="http://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
+				alt="Valid HTML5" height="50" width="50"
+				style="border:0;" /></a>
+				</p>
+				<p>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+				<img style="border:0;width:88px;height:31px"
+				src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+				alt="Valid CSS!" />
+				</a>
+				</p>
 			</div>
-			</body>
-			</html>
+		</div>
+	</body>
+</html>
