Början på kundvagn

--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -25,7 +25,7 @@
 							<a href="../index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
 						</div>
 						<div class="fl">
-							<a href="../index.html"><h1>Badarens Bad</a></h1>
+							<a href="../index.html"><h1>Badarens Bad</h1></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
@@ -54,7 +54,7 @@
 					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 					<li class="left"><a class="active" href="">ÖVRIGA</a></li>
 					<li class="menu mobile" onclick="topMenu()"><a href="#home">| | |</a></li>
-					<li class="vagn mobile"><a href=" kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
+					<li class="vagn mobile"><a href="../kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
 				</ul>
 			</nav>
 			</form>
