--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 
 
-			<div class="clear">
+<div class="clear"></div>
 
 		<!-- W3C logos for valid HTML5 and CSS3 -->
 		<div class="clear"></div>
@@ -185,6 +185,7 @@
 			alt="Valid CSS!" />
 			</a>
 			</p>
+		</div>
 		</div>
 	</body>
 </html>
