--- a/yrken/badanka_brandman.html
+++ b/yrken/badanka_brandman.html
@@ -25,7 +25,7 @@
 							<a href="../index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
 						</div>
 						<div class="fl">
-							<a href="../index.html"><h1>Badarens Bad</a></h1>
+							<a href="../index.html"><h1>Badarens Bad</h1></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
@@ -116,6 +116,7 @@
 
 									<span>Antal: </span><input type="text" name="antal" pattern="[0-9]" title="Ange antal:" size="2">
 									<input type="submit" value="Lägg i kundvagn">
+								</form>
 							</div>
 						</div>
 
@@ -171,8 +172,6 @@
 
 
 
-			<div class="clear">
-
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
 			<div style="margin-top: 100px;">
@@ -189,6 +188,7 @@
 			alt="Valid CSS!" />
 			</a>
 			</p>
+			</div>
 			</div>
 			</body>
 			</html>
