--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -25,7 +25,7 @@
 							<a href="../index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
 						</div>
 						<div class="fl">
-							<a href="../index.html"><h1>Badarens Bad</a></h1>
+							<a href="../index.html"><h1>Badarens Bad</h1></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
@@ -160,9 +160,6 @@
 
 
 
-
-			<div class="clear">
-
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
 			<div style="margin-top: 100px;">
@@ -179,6 +176,7 @@
 			alt="Valid CSS!" />
 			</a>
 			</p>
+			</div>
 			</div>
 			</body>
 			</html>
