fixat trasiga länkar och sökfältet i safari

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 				<div id="div-head">
 					<div id="head-left">
 						<div class="fl head-logo left">
-							<a href="index.html"><img src="../images/logo_inv.png" alt="Badanka logo"></a>
+							<a href="index.html"><img src="images/logo_inv.png" alt="Badanka logo"></a>
 						</div>
 						<div class="fl">
 							<a href="index.html"><h1>Badarens Bad</h1></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
-							<a href="index.html"><img src="../images/logo_inv_fliped.png" alt="Badanka logo"></a>
+							<a href="index.html"><img src="images/logo_inv_fliped.png" alt="Badanka logo"></a>
 						</div>
 					</div>
 					<div id="head-search">
