css för lägga i kundvagn-formen

--- a/yrken/badanka_brandman.html
+++ b/yrken/badanka_brandman.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="container">
 
-			
+
 			<!-- BÖRJAN header -->
 			<header>
 				<div id="div-head">
@@ -71,7 +71,7 @@
 			</div>
 			<!-- SLUT menu -->
 
-			
+
 			<!-- BÖRJAN main -->
 			<div class="clear"></div>
 			<div id="nav-main">
@@ -103,7 +103,7 @@
 									<br>
 									<br>
 
-									<span>Antal: </span><input type="text" name="antal" pattern="[0-9]" title="Ange antal:" size="2">
+									<span>Antal: </span><input type="text" name="antal" pattern="[0-9]" title="Ange antal:" size="2" value="1">
 									<input type="submit" value="Lägg i kundvagn">
 							</div>
 						</div>
@@ -111,12 +111,12 @@
 					<div class="clear"> </div>
 				</main>
 			</div>
-			
+
 			<div class="clear"> </div>
 			<!-- SLUT main -->
 
 
-			
+
 			<!-- BÖRJAN footer -->
 			<footer>
 				<div id="servicelankar">
@@ -149,7 +149,7 @@
 
 			<div class="clear"> </div>
 
-			
+
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
 			<div style="margin-top: 100px;">
