Namn och sökväg på kundvagn. Lade till en 404 sida.

--- a/order/kundvagn.html
+++ b/order/kundvagn.html
@@ -33,7 +33,7 @@
 				  </form>
 					</div>
 				</div>
-				<div id="head-kundvagn"><a class="active" href="../kundvagn/" ><span id="kundvagn">19</span>&nbsp;</a></div>
+				<div id="head-kundvagn"><a class="active" href="../order/kundvagn.html" ><span id="kundvagn">19</span>&nbsp;</a></div>
 				<div class="clear"> </div>
 			</header>
 			<!-- SLUT header -->
@@ -44,13 +44,10 @@
 			<nav id="main-nav" class="mobile">
 				<ul class="topnav">
 					<li class="menu" onclick="topMenu()"><a href="#">| | |</a></li>
-
 					<li class="left"><a href="../">HEM</a></li>
 					<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 					<li class="left"><a href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
-					<li class="menu mobile" onclick="topMenu()"><a href="#">| | |</a></li>
-					<li class="vagn mobile"><a href="../kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
 				</ul>
 			</nav>
 			</form>
