--- a/yrken/badanka_brandman.html
+++ b/yrken/badanka_brandman.html
@@ -49,7 +49,7 @@
 					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 					<li class="left"><a href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
 					<li class="menu mobile" onclick="topMenu()"><a href="#home">| | |</a></li>
-					<li class="vagn mobile"><a href="../kundvagn/" ><span id="kundvagn1">0</span>&nbsp;</a></li>
+					<li class="vagn mobile"><a href="../order" ><span id="kundvagn1">0</span>&nbsp;</a></li>
 				</ul>
 			</nav>
 			</form>
