--- a/404.html
+++ b/404.html
@@ -91,8 +91,8 @@
 				</nav>
 
 				<main id="right-main">
-					
-					<p style="margin: 25px;">Nej nu gick det inte helt rätt till, klicka <a href="index.html">HÄR</a> för att komma till början.</p>
+					<h1 class="fyranollfyra">404 - Här fanns det inga badankor</h1>
+					<p style="margin: 25px;">Nej nu gick det inte helt rätt till, klicka <a href="index.html" alt="Till startsidan">HÄR</a> för att komma till början.</p>
 
 					<div class="clear"> </div>
 				</main>
