--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+		
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+		
+		<!--<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet"> -->
+		
 		<script src="js.js"></script>
 		<script src="slider.js"></script>
 	</head>
